--- a/menu — копия.html
+++ b/menu — копия.html
@@ -2,10 +2,11 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Анимированное меню</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>ДУБЛИН</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-
+  <link rel="stylesheet" href="fonts/fonts.css" />
+  <link rel="stylesheet" href="mobile-adaptation.css">
 
 
 
@@ -89,7 +90,7 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      font-family: 'Grandis';
+      font-family: Grandis Extended;
       background: #111;
       color: #fff;
       overflow: hidden;
@@ -570,6 +571,54 @@
     .menu a.active {
       transform: scale(1.2);
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </style>
 </head>
 <body>
