--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>ДУБЛИН</title>
+  <title>ДУБЛИН ПАЮ</title>
   <link rel="icon" href="logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="fonts/fonts.css" />
@@ -103,7 +103,7 @@
       left: 50px;
       transform: translateY(-50%);
       list-style: none;
-      padding: 15px 20px;
+      padding: 15px 10px;
       margin: 0;
       z-index: 10;
       margin-left: auto;
@@ -1230,7 +1230,7 @@
     <div class="page" id="p4">
       <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
       <div class="title">ЛОКАЦИЯ</div>
-      <div class="hint">Наш адрес:<br> г. Сургут, ул. Примерная, 123</div>
+      <div class="hint">Наш адрес:<br> г. Сургут, Ленинградская улица, 1/2</div>
 
       <div class="map-box">
         <iframe
@@ -1251,23 +1251,23 @@
       </div>
 
       <div class="social-links">
-        <a href="#" class="social-item vk">
+        <a href="https://vk.com/dublinpab86" class="social-item vk" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-vk"></i>
           <span>ВКонтакте</span>
         </a>
-        <a href="#" class="social-item telegram">
+        <a href="https://t.me/dublinpub86" class="social-item telegram" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-telegram"></i>
           <span>Telegram</span>
         </a>
-        <a href="#" class="social-item instagram">
+        <a href="https://www.instagram.com/dublin.pub.surgut?" class="social-item instagram" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-instagram"></i>
           <span>Instagram</span>
         </a>
-        <a href="#" class="social-item gis">
+        <a href="https://go.2gis.com/cQit9" class="social-item gis" target="_blank" rel="noopener noreferrer">
           <img src="2gis Logo.svg" alt="2ГИС">
           <span>2ГИС</span>
         </a>
-        <a href="#" class="social-item yandex">
+        <a href="https://yandex.ru/maps/-/CHG3u6YX" class="social-item yandex" target="_blank" rel="noopener noreferrer">
           <i class="fas fa-location-arrow"></i>
           <span>Я.Карты</span>
         </a>
