--- a/index.html
+++ b/index.html
@@ -286,6 +286,16 @@
       box-shadow: 0 0 20px rgba(0,0,0,0.5);
     }
 
+    .game-box {
+      width: 100%;
+      z-index: 1;
+      max-width: 350px;
+      margin: 30px auto 0;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    }
+
     .restaurant-menu {
       font-size: 16px;
       margin-top: 20px;
@@ -672,7 +682,7 @@
       <li><a href="#p7" class="fa-solid fa-smoke"></i></a></li>
       <li><a href="#p4" class="fa-solid fa-location-dot"></i></a></li>
       <li><a href="#p5" class="fa-solid fa-hashtag"></i></a></li>
-      <li><a href="#p6" class="fa-solid fa-balloons"></i></a></li>
+      <li><a href="#p6" class="fa-solid fa-gamepad"></i></a></li>
     </ul>
 
 
@@ -1277,12 +1287,16 @@
     </section>
 
     <section id="p6" class="page">
-      <div class="icon fa-solid fa-balloons"></div>
-      <div class="title">IVENTS</div>
-      <div class="hint">
-        СКОРО...
-      </div>
+      
+      <div class="game-box">
 
+      <iframe src="https://moses-ru.github.io/game-beer/" 
+      width="100%"
+      height="550dvh"
+      frameborder="0"
+      allowfullscreen
+       ></iframe>
+      </div>
       
     </section>
 
