--- a/index.html
+++ b/index.html
@@ -288,12 +288,21 @@
 
     .game-box {
       width: 100%;
-      z-index: 1;
       max-width: 350px;
       margin: 30px auto 0;
       border-radius: 12px;
       overflow: hidden;
       box-shadow: 0 0 20px rgba(0,0,0,0.5);
+      position: relative;
+      aspect-ratio: 9 / 16; /* Главное: задать соотношение сторон */
+    }
+
+    .game-box iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+      display: block;
+      pointer-events: auto;
     }
 
     .restaurant-menu {
@@ -1287,17 +1296,12 @@
     </section>
 
     <section id="p6" class="page">
-      
       <div class="game-box">
-
-      <iframe src="https://moses-ru.github.io/game-beer/" 
-      width="100%"
-      height="550dvh"
-      frameborder="0"
-      allowfullscreen
-       ></iframe>
+        <iframe 
+          src="https://moses-ru.github.io/game-beer/"
+          allowfullscreen
+        ></iframe>
       </div>
-      
     </section>
 
 
