--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>ДУБЛИН ПАБ</title>
+  <title>ДУБЛИН</title>
   <link rel="icon" href="logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="fonts/fonts.css" />
@@ -103,7 +103,7 @@
       left: 50px;
       transform: translateY(-50%);
       list-style: none;
-      padding: 15px 10px;
+      padding: 15px 15px;
       margin: 0;
       z-index: 10;
       margin-left: auto;
@@ -610,6 +610,12 @@
     .yandex {
       background-color: #ffcc00;
       color: #111;
+    }
+
+    .tel {
+      background-color: #000000;
+      color: #ffffff;
+      
     }
 
 
@@ -1289,6 +1295,10 @@
         <a href="https://yandex.ru/maps/-/CHG3u6YX" class="social-item yandex" target="_blank" rel="noopener noreferrer">
           <i class="fas fa-location-arrow"></i>
           <span>Я.Карты</span>
+        </a>
+        <a href="https://wa.me/79224146601" class="social-item tel" target="_blank" rel="noopener noreferrer" >
+          <i class="fa-solid fa-phone"></i>
+          <span>Бронь</span>
         </a>
       </div>
 
