--- a/index.html
+++ b/index.html
@@ -2108,7 +2108,7 @@
       <div class="bar-menu-container">
         <div class="bar-menu-wrapper">
     
-          <div id="hookah-snacks" class="bar-menu-section active">
+          <div id="hookah" class="bar-menu-section active">
             
             <div class="bar-menu-title">Кальяны</div>
             <div class="bar-menu-item"><div class="bar-info"><div class="bar-title">КЛАССИКА</div></div><div class="bar-price">1300₽</div></div>
